# unity-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  UnityMCP-设计方案-v2.1增量.md  UnityMCP-设计方案.md  UnityMCP-设计方案审查.md  llms.txt  server.json
.github/workflows/: ci.yml  release-server.yml
docs/: README.en.md
docs/superpowers/plans/: 2026-03-11-comprehensive-optimization-plan.md  2026-03-11-progressive-optimization-plan.md
docs/superpowers/specs/: 2026-03-11-comprehensive-optimization-design.md  2026-03-11-progressive-optimization-design.md
scripts/: build_bridge.sh  bump-version.sh  publish_pypi.sh
unity-bridge/: Program.cs
unity-mcp/: package.json
unity-mcp/Editor/: UnityMcp.Editor.asmdef
unity-mcp/Editor/Core/: DependencyChecker.cs  MainThreadDispatcher.cs  McpLogger.cs  McpServer.cs  McpServices.cs  McpSettings.cs  PackageUpdateChecker.cs  RequestHandler.cs  ScriptingDefineInstaller.cs  ServerProcessManager.cs  TcpTransport.cs  ToolCallLogger.cs  ToolRegistry.cs
unity-mcp/Editor/Prompts/: ArchitecturePrompts.cs  ScriptPrompts.cs  SpecialtyPrompts.cs  SpecialtyPrompts2.cs  SystemDesignPrompts.cs  SystemDesignPrompts2.cs
unity-mcp/Runtime/: UnityMcp.Runtime.asmdef
unity-mcp/Shared/: UnityMcp.Shared.asmdef
unity-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
unity-server/tests/: test_unity_connection.py
unity-server/unity_mcp_server/: __init__.py  config.py  server.py  unity_connection.py
unity-server/unity_mcp_server/tools/: __init__.py  asset_validator.py  lanhu.py  psd_parser.py  script_analyzer.py
(+111 files in other folders)
