[project]
name = "unity-mcp-server"
version = "1.0.3"
description = "Python MCP server for Unity Editor — enables AI assistants to control Unity via the Model Context Protocol"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    { name = "mzbswh" }
]
keywords = ["mcp", "unity", "ai", "llm", "game-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mzbswh/unity-mcp"
Repository = "https://github.com/mzbswh/unity-mcp"
Issues = "https://github.com/mzbswh/unity-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
unity-mcp-server = "unity_mcp_server.server:main"
